--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     new Chart(ctx1, {
         type: 'bar',
         data: singleBarData,
-        options: barOptions,
+        options: barOptions
     });
 
     new Chart(ctx2, {
