--- a/pieCharts.html
+++ b/pieCharts.html
@@ -60,13 +60,14 @@
     new Chart(ctx1, {
         type: 'pie',
         data: singlePieData,
-        options: pieOptions
+        options: createOptions("Pie Chart")
+
     });
 
     new Chart(ctx2, {
-        type: 'pie',
-        data: multiplePieData,
-        options: pieOptions
+        type: 'doughnut',
+        data: singlePieData,
+        options: createOptions("Doughnut Chart")
     });
 </script>
 
