--- a/radarCharts.html
+++ b/radarCharts.html
@@ -40,9 +40,80 @@
     <div class="row">
         <div class="col-md-6">
             <canvas id="chart1" width="300" height="300"></canvas>
+            <p> This simple Radar Chart plots one dataset.
+                The dataset consists of an array of datapoints (data)
+                A color for the line(borderColor)
+                And a label for the dataset (label)</p>
+            <p>Outside of the dataset the columns labels are specified.</p>
+            <pre>
+{
+    datasets: [{
+        data: [
+            11,
+            16,
+            7,
+            3,
+            14
+        ],
+        label: 'My dataset'
+    }],
+    labels: [
+        "Red",
+        "Green",
+        "Yellow",
+        "Grey",
+        "Blue"
+    ]
+}
+</pre>
+
+
+
         </div>
         <div class="col-md-6">
             <canvas id="chart2" width="300" height="300"></canvas>
+            <p> This Radar Chart plots two datasets.
+                The dataset consists of an array of datapoints (data)
+                A color for the line(borderColor)
+                And a label for the dataset (label)</p>
+            <p>Outside of the dataset the columns labels are specified.</p>
+
+<pre>
+{
+    datasets: [{
+            data: [
+                11,
+                16,
+                7,
+                3,
+                14
+            ],
+            borderColor: "rgba(220,0,0,0.5)",
+            backgroundColor: "rgba(220,0,0,0.5)",
+            label: '2015'
+        },
+        {
+            data: [
+                1,
+                6,
+                17,
+                13,
+                4
+            ],
+            borderColor: "rgba(0,220,220,0.5)",
+            backgroundColor: "rgba(0,220,220,0.5)",
+            label: '2016'
+        }],
+    labels: [
+        "Red",
+        "Green",
+        "Yellow",
+        "Grey",
+        "Blue"
+    ]
+}
+</pre>
+
         </div>
     </div>
 </div>
@@ -56,13 +127,13 @@
     new Chart(ctx1, {
         type: 'radar',
         data: singleRadarData,
-        options: radarOptions
+        options: createOptions("Single Dataset Radar Chart")
     });
 
     new Chart(ctx2, {
         type: 'radar',
         data: multipleRadarData,
-        options: radarOptions
+        options: createOptions("Multiple Dataset Radar Chart")
     });
 </script>
 
