--- a/compositeCharts.html
+++ b/compositeCharts.html
@@ -7,7 +7,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
     <script src="js/defaultCharts.js"></script>
-    <script src="js/barCharts.js"></script>
+    <script src="js/compositeChart.js"></script>
 </head>
 <body>
 
@@ -53,8 +53,8 @@
 
     new Chart(ctx1, {
         type: 'bar',
-        data: multipleBarData,
-        options: barOptions
+        data: compositeBarLineData,
+        options: createOptions("Composite Bar-Line Chart")
     });
 </script>
 
