--- a/pieCharts.html
+++ b/pieCharts.html
@@ -44,9 +44,59 @@
     <div class="row">
         <div class="col-md-6">
             <canvas id="chart1" width="300" height="300"></canvas>
+            <p> This Pie Chart plots one dataset.
+                The dataset consists of an array of datapoints (data)
+                An array of colors for the segments(backgroundColor)
+                And a label for the dataset (label)</p>
+            <p>Outside of the dataset the columns labels are specified.</p>
+<pre>
+{
+    datasets: [{
+        data: [
+            11,
+            16,
+            7,
+            3,
+            14
+        ],
+        backgroundColor: [
+            "#FF6384",
+            "#4BC0C0",
+            "#FFCE56",
+            "#E7E9ED",
+            "#36A2EB"
+        ],
+        label: 'My dataset'
+    }],
+    labels: [
+        "Red",
+        "Green",
+        "Yellow",
+        "Grey",
+        "Blue"
+    ]
+}
+</pre>
+
         </div>
         <div class="col-md-6">
             <canvas id="chart2" width="300" height="300"></canvas>
+            <p> This Doughnut Chart is plotted in the same way as the Pie Chart.
+            The deifference is that when the chart is created, it's type is 'doughnut' instead of 'pie'.
+<pre>
+new Chart(ctx1, {
+    <strong>type: 'pie',</strong>
+    data: singlePieData,
+    options: createOptions("Pie Chart")
+});
+
+new Chart(ctx2, {
+    <strong>type: 'doughnut',</strong>
+    data: singlePieData,
+    options: createOptions("Doughnut Chart")
+});
+</pre>
+
         </div>
     </div>
 </div>
@@ -61,7 +111,6 @@
         type: 'pie',
         data: singlePieData,
         options: createOptions("Pie Chart")
-
     });
 
     new Chart(ctx2, {
