--- a/barcharts.html
+++ b/barcharts.html
@@ -97,7 +97,7 @@
             14
         ],
         backgroundColor: "rgba(200,200,200,0.5)",
-        label: '2015' // for legend
+        label: '2015'
     },
         {
             data: [
@@ -108,7 +108,7 @@
                 4
             ],
             backgroundColor: "#FFCE56",
-            label: '2016' // for legend
+            label: '2016'
         }],
     labels: [
         "Red",
