--- a/polarAreaCharts.html
+++ b/polarAreaCharts.html
@@ -40,6 +40,40 @@
     <div class="row">
         <div class="col-md-6">
             <canvas id="chart1" width="300" height="300"></canvas>
+            <p> This Polar Area Chart plots one dataset.
+                The dataset consists of an array of datapoints (data)
+                An array of colors for the segments(backgroundColor)
+                And a label for the dataset (label)</p>
+            <p>Outside of the dataset the columns labels are specified.</p>
+<pre>
+{
+    datasets: [{
+        data: [
+            11,
+            16,
+            7,
+            3,
+            14
+        ],
+        backgroundColor: [
+            "#FF6384",
+            "#4BC0C0",
+            "#FFCE56",
+            "#E7E9ED",
+            "#36A2EB"
+        ],
+        label: 'My dataset'
+    }],
+    labels: [
+        "Red",
+        "Green",
+        "Yellow",
+        "Grey",
+        "Blue"
+    ]
+}
+</pre>
+
         </div>
     </div>
 </div>
